fixed a lot of styling. Still has issue with buttons down the bottom being cut off online in desktop mode

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
     justify-content: center;
     align-items: center;
 }
+
 button[id*="c-letter"]{
     width: 5vw;
     height: 7vh;
@@ -60,27 +61,57 @@ button[class*="guessLetter"]{
     color: yellow;
     font-family: starJedi;
 }
+
 #scoreContainer{
     grid-area: scoreContainer;
     font-size: 2vh;
     font-family: starJedi;
 }
 
-#optionsContainer {grid-area: optionsContainer;}
-#animationArea {grid-area: animationArea;}
-#guessLetterContainer {grid-area: guessLetterContainer;}
-#guessDefinition {grid-area: guessDefinition;}
+#optionsContainer {
+    grid-area: optionsContainer;
+
+}
+
+#animationArea {
+    grid-area: animationArea;
+}
+
+#guessLetterContainer {
+    grid-area: guessLetterContainer;
+    justify-content: center;
+}
+
+#guessDefinition {
+    grid-area: guessDefinition;
+    color: yellow;
+}
+
+#choiceLetterContainer {
+
+}
 
 body {
+    min-height: 568px;
+    min-width: 320px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 5%;
     background-image: url('../images/background.jpg');
     background-size: 100% 100%;
     display: flex;
-    padding: 5px;
+    padding: 10px;
     justify-content: center;
     font-family: serifGothic;
-
     color:yellow;
     font-size: 1vw;
+}
+
+html {
+    width:100%;
+    height:100%;
+    overflow:hidden;
 }
 
 .item {
@@ -128,6 +159,7 @@ body {
                 "guessDefinition"
     }
 }
+
 #startStop {
     margin: 0.1%;
     border-radius: 10px;
